# ChangeLog for sci-visualization/tulip
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Apr 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -skel.metadata.xml:
  Really remove skel.metadata.xml

  29 Apr 2009; termite <rb6@duke.edu> ChangeLog:
  remove skel.metadata.xml

  29 Apr 2009; termite <rb6@duke.edu> +tulip-3.1.2.ebuild, +metadata.xml,
  +skel.metadata.xml:
  new ebuild for Tulip, bug 257277

  29 Apr 2009; termite <rb6@duke.edu> +tulip-3.1.2.ebuild, +metadata.xml:
  new ebuild for Tulip, bug 257277
