@@ -1,4 +1,4 @@
 DIST tulip-3.1.2.tar.bz2 20335763 RMD160 4f4a740e7661e241fff8f14def8e4e161291f875 SHA1 60f65c9461f69a1421620769b1c2885094c4618a SHA256 bda400784bd1b7aa31cb9dfbf1d2da9b897809e5174f46eb33b509f492216ac2
-EBUILD tulip-3.1.2.ebuild 1137 RMD160 f14f6a561ba24f56a16746fb43a1f157fec254d5 SHA1 be540e398ccdcc1b9bf82b45ece9ac9e38ccdf66 SHA256 2fae9ee56d973ea363714df13bd7db022bc7c3b3746fc386956d02b207c22da7
-MISC ChangeLog 559 RMD160 fcd8ddf0a88e951e1971a061e7e48efaf7f2c534 SHA1 3ce972c5798bc801dfa6af3f325199181777f125 SHA256 0669f0ccfac661e202cb5b0cbbbd7ccd7d5db024e996817dde40b45b924800d8
+EBUILD tulip-3.1.2.ebuild 1011 RMD160 10219bfcc019c005062ffae39816961fec284865 SHA1 255cf1cb8105fcb3077196f13a9fc13114abdeee SHA256 29178bf66b945be47e84e42e1b8f1a99b553a05121fc03402a43ffd2ba177343
+MISC ChangeLog 648 RMD160 9da251b418f63f2eeba89afb702c8b559de879d5 SHA1 cea65517536f53c4cbcd04ad4ca721881e55c4b4 SHA256 32e8252dfbdff44ee86abe0f3f71b505dcbdee8128366a2ecb73e3b063f5d0d3
 MISC metadata.xml 285 RMD160 58b5eedfb276221761ad179c6a41ef3310f4ed46 SHA1 d2bb85911d82fd9c998ac284b486ef30d4173169 SHA256 380557d07df95fc3289848cb74ba3ed28be038358e341580d0d1344c40b76beb
