@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Apr 2009; termite <rb6@duke.edu> tulip-3.1.2.ebuild:
+  ebuild polish, as requested
+
   29 Apr 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -skel.metadata.xml:
   Really remove skel.metadata.xml
